# bank-dimchov_b

./: .gitignore  CMakeLists.txt  Protocols.md  build.sh  customers.csv  log.csv  project.yml  simulated_transactions.csv
build_for_test/test/dependencies/: unity.d
docs/: PROTOCOLS.md  PROTOCOL_UNIT_TEST.md  README.TEST.md  README.md
include/: account.h  account_helper.h  customer.h  main.h  transaction.h  transaction_helper.h  types.h  user.h
src/: account.c  customer.c  main.c  transaction.c  transaction_helper.c
test/: nope_test_main.c  test_account.c  test_customer.c  test_main.c  test_transaction.c  test_transaction_helper.c
